--- a/firmware/uc_granotec/platformio.ini
+++ b/firmware/uc_granotec/platformio.ini
@@ -12,3 +12,8 @@
 platform = atmelavr
 board = nano_optiboot
 framework = arduino
+
+;[env:nanoatmega328]
+;platform = atmelavr
+;board = nanoatmega328
+;framework = arduino
