--- a/config/cron.conf
+++ b/config/cron.conf
@@ -1,6 +1,6 @@
-@reboot python /home/pi/biocl_system/app.py	       >> /home/pi/biocl_system/log/my.log.app    2>&1
-@reboot python /home/pi/biocl_system/database.py   >> /home/pi/biocl_system/log/my.log.db     2>&1
-@reboot python /home/pi/biocl_system/myserial.py   >> /home/pi/biocl_system/log/my.log.serial 2>&1
-@reboot python /home/pi/biocl_system/cloud.py 	   >> /home/pi/biocl_system/log/my.log.cloud  2>&1
+@reboot python /home/pi/vprocess2/app.py	       >> /home/pi/vprocess2/log/my.log.app    2>&1
+@reboot python /home/pi/vprocess2/database.py   >> /home/pi/vprocess2/log/my.log.db     2>&1
+@reboot python /home/pi/vprocess2/myserial.py   >> /home/pi/vprocess2/log/my.log.serial 2>&1
+@reboot python /home/pi/vprocess2/cloud.py 	   >> /home/pi/vprocess2/log/my.log.cloud  2>&1
 
-#* * * * * screen -S app -d -m flock -n /home/pi/biocl_system/flock_app.pid python /home/pi/biocl_system/app.py 2>&1 > /dev/null &
+#* * * * * screen -S app -d -m flock -n /home/pi/vprocess2/flock_app.pid python /home/pi/vprocess2/app.py 2>&1 > /dev/null &
