--- a/firmware/uc_granotec/platformio.ini
+++ b/firmware/uc_granotec/platformio.ini
@@ -12,6 +12,7 @@
 platform = atmelavr
 board = nano_optiboot
 framework = arduino
+#upload_port = /dev/cu.wchusbserial1410
 
 ;[env:nanoatmega328]
 ;platform = atmelavr
