--- a/firmware/uc_granotec/platformio.ini
+++ b/firmware/uc_granotec/platformio.ini
@@ -13,6 +13,7 @@ platform = atmelavr
 board = nano_optiboot
 framework = arduino
 upload_port = /dev/ttyUSB1
+upload_port = /dev/cu.wchusbserial1420
 
 ;[env:nanoatmega328]
 ;platform = atmelavr
